brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask brocode to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
