brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__replayed_interrupted_reconnect_footer_row.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 7060
expression: header
---
› [PROMPT HERE]
