brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---









• Working (0s • esc to interrupt)

• Queued follow-up messages
  ↳ Queued while /review is running.
    ⌥ + ↑ edit last queued message

› [PROMPT HERE]

  ? for shortcuts                                            100% context left
