brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› [PROMPT HERE]                                                      "
"                                                                                "
"  Fast on                                                                       "
