brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask brocode to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
