brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"                                                                                "
"                                                                                "
"› Ask brocode to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
